load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "phase8_ci_matrix_shape_test",
    size = "small",
    srcs = ["phase8_ci_matrix_shape_test.sh"],
    args = ["$(rlocationpath //.github/workflows:ci.yml)"],
    data = ["//.github/workflows:ci.yml"],
)

sh_test(
    name = "phase8_ci_targets_test",
    size = "small",
    srcs = ["phase8_ci_targets_test.sh"],
    args = ["$(rlocationpath :phase8_ci_targets.sh)"],
    data = [":phase8_ci_targets.sh"],
)

sh_test(
    name = "native_wrapper_shape_test",
    size = "small",
    srcs = ["verify_native_wrapper_shape.sh"],
    args = [
        "$(location //tests/binary_test:configured_launcher_bin)",
        "$(location //tests/script_test:workspace_flagged_script)",
        "$(location //tests/js_compat_test:compat_devserver)",
        "$(location //tests/bun_test_test:configured_suite)",
    ],
    data = [
        "//tests/binary_test:configured_launcher_bin",
        "//tests/bun_test_test:configured_suite",
        "//tests/js_compat_test:compat_devserver",
        "//tests/script_test:workspace_flagged_script",
    ],
    env_inherit = ["PATH"],
)
