load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "bun_install_extension_shape_test",
    srcs = ["extension_shape_test.sh"],
    args = ["$(location //bun:extensions.bzl)"],
    data = ["//bun:extensions.bzl"],
)

sh_test(
    name = "npm_translate_lock_extension_shape_test",
    srcs = ["npm_extension_shape_test.sh"],
    args = ["$(location //npm:extensions.bzl)"],
    data = ["//npm:extensions.bzl"],
)
