load("@rules_shell//shell:sh_test.bzl", "sh_test")

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

config_setting(
    name = "darwin_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "darwin_aarch64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
)

sh_test(
    name = "bun_install_clean_install_test",
    srcs = ["clean_install.sh"],
    args = select({
        ":linux_x86_64": ["$(location @bun_linux_x64//:bun)"],
        ":linux_aarch64": ["$(location @bun_linux_aarch64//:bun)"],
        ":darwin_x86_64": ["$(location @bun_darwin_x64//:bun)"],
        ":darwin_aarch64": ["$(location @bun_darwin_aarch64//:bun)"],
        "//conditions:default": ["$(location @bun_linux_x64//:bun)"],
    }),
    data = select({
        ":linux_x86_64": ["@bun_linux_x64//:bun"],
        ":linux_aarch64": ["@bun_linux_aarch64//:bun"],
        ":darwin_x86_64": ["@bun_darwin_x64//:bun"],
        ":darwin_aarch64": ["@bun_darwin_aarch64//:bun"],
        "//conditions:default": ["@bun_linux_x64//:bun"],
    }),
)

sh_test(
    name = "bun_install_stale_lockfile_test",
    srcs = ["stale_lockfile.sh"],
    args = select({
        ":linux_x86_64": ["$(location @bun_linux_x64//:bun)"],
        ":linux_aarch64": ["$(location @bun_linux_aarch64//:bun)"],
        ":darwin_x86_64": ["$(location @bun_darwin_x64//:bun)"],
        ":darwin_aarch64": ["$(location @bun_darwin_aarch64//:bun)"],
        "//conditions:default": ["$(location @bun_linux_x64//:bun)"],
    }),
    data = select({
        ":linux_x86_64": ["@bun_linux_x64//:bun"],
        ":linux_aarch64": ["@bun_linux_aarch64//:bun"],
        ":darwin_x86_64": ["@bun_darwin_x64//:bun"],
        ":darwin_aarch64": ["@bun_darwin_aarch64//:bun"],
        "//conditions:default": ["@bun_linux_x64//:bun"],
    }),
)

sh_test(
    name = "bun_install_determinism_test",
    srcs = ["determinism.sh"],
    args = ["$(location //internal:bun_install.bzl)"],
    data = ["//internal:bun_install.bzl"],
)

sh_test(
    name = "bun_install_environment_shape_test",
    srcs = ["environment_shape.sh"],
    args = ["$(location //internal:bun_install.bzl)"],
    data = ["//internal:bun_install.bzl"],
)

sh_test(
    name = "bun_install_workspaces_test",
    srcs = ["workspaces.sh"],
    args = select({
        ":linux_x86_64": ["$(location @bun_linux_x64//:bun)"],
        ":linux_aarch64": ["$(location @bun_linux_aarch64//:bun)"],
        ":darwin_x86_64": ["$(location @bun_darwin_x64//:bun)"],
        ":darwin_aarch64": ["$(location @bun_darwin_aarch64//:bun)"],
        "//conditions:default": ["$(location @bun_linux_x64//:bun)"],
    }),
    data = select({
        ":linux_x86_64": ["@bun_linux_x64//:bun"],
        ":linux_aarch64": ["@bun_linux_aarch64//:bun"],
        ":darwin_x86_64": ["@bun_darwin_x64//:bun"],
        ":darwin_aarch64": ["@bun_darwin_aarch64//:bun"],
        "//conditions:default": ["@bun_linux_x64//:bun"],
    }),
)

sh_test(
    name = "bun_install_workspaces_catalog_test",
    srcs = ["workspaces_catalog.sh"],
    args = select({
        ":linux_x86_64": ["$(location @bun_linux_x64//:bun)"],
        ":linux_aarch64": ["$(location @bun_linux_aarch64//:bun)"],
        ":darwin_x86_64": ["$(location @bun_darwin_x64//:bun)"],
        ":darwin_aarch64": ["$(location @bun_darwin_aarch64//:bun)"],
        "//conditions:default": ["$(location @bun_linux_x64//:bun)"],
    }),
    data = select({
        ":linux_x86_64": ["@bun_linux_x64//:bun"],
        ":linux_aarch64": ["@bun_linux_aarch64//:bun"],
        ":darwin_x86_64": ["@bun_darwin_x64//:bun"],
        ":darwin_aarch64": ["@bun_darwin_aarch64//:bun"],
        "//conditions:default": ["@bun_linux_x64//:bun"],
    }),
)

sh_test(
    name = "bun_install_workspace_parity_test",
    srcs = ["workspace_parity.sh"],
    env_inherit = ["PATH"],
    args = select({
        ":linux_x86_64": ["$(location @bun_linux_x64//:bun)"],
        ":linux_aarch64": ["$(location @bun_linux_aarch64//:bun)"],
        ":darwin_x86_64": ["$(location @bun_darwin_x64//:bun)"],
        ":darwin_aarch64": ["$(location @bun_darwin_aarch64//:bun)"],
        "//conditions:default": ["$(location @bun_linux_x64//:bun)"],
    }),
    data = select({
        ":linux_x86_64": ["@bun_linux_x64//:bun"],
        ":linux_aarch64": ["@bun_linux_aarch64//:bun"],
        ":darwin_x86_64": ["@bun_darwin_x64//:bun"],
        ":darwin_aarch64": ["@bun_darwin_aarch64//:bun"],
        "//conditions:default": ["@bun_linux_x64//:bun"],
    }) + [
        "//:repo_runtime_files",
        "//bun:repo_runtime_files",
        "//internal:repo_runtime_files",
    ],
)

sh_test(
    name = "bun_install_install_flags_shape_test",
    srcs = ["install_flags_shape.sh"],
    args = ["$(location //internal:bun_install.bzl)"],
    data = ["//internal:bun_install.bzl"],
)
