load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "examples_basic_e2e_build_test",
    srcs = ["examples_basic_e2e_build_test.sh"],
    args = [
        "$(location //examples/basic:BUILD.bazel)",
        "$(location //examples/basic:README.md)",
    ],
    data = [
        "//examples/basic:BUILD.bazel",
        "//examples/basic:README.md",
    ],
)

sh_test(
    name = "examples_workspace_bundle_e2e_test",
    srcs = ["examples_workspace_bundle_e2e_test.sh"],
    args = ["$(location //examples/workspace:pkg_b_bundle)"],
    data = ["//examples/workspace:pkg_b_bundle"],
)

sh_test(
    name = "examples_workspace_catalog_shape_test",
    srcs = ["examples_workspace_catalog_shape_test.sh"],
    args = [
        "$(location //examples/workspace:package.json)",
        "$(location //examples/workspace:packages/pkg-a/package.json)",
        "$(location //examples/workspace:packages/pkg-b/package.json)",
    ],
    data = [
        "//examples/workspace:package.json",
        "//examples/workspace:packages/pkg-a/package.json",
        "//examples/workspace:packages/pkg-b/package.json",
    ],
)

sh_test(
    name = "repo_all_targets_test",
    srcs = ["repo_all_targets_test.sh"],
    args = ["$(location //.github/workflows:ci.yml)"],
    data = ["//.github/workflows:ci.yml"],
)
