load("@rules_shell//shell:sh_test.bzl", "sh_test")

test_suite(
    name = "examples_test",
    tests = [
        ":examples_basic_run_e2e_test",
        ":examples_workspace_bundle_e2e_test",
        ":examples_workspace_catalog_shape_test",
        ":examples_vite_monorepo_catalog_shape_test",
        ":examples_vite_monorepo_e2e_test",
    ],
)

sh_test(
    name = "examples_basic_e2e_build_test",
    srcs = ["examples_basic_e2e_build_test.sh"],
    args = [
        "$(location //examples/basic:BUILD.bazel)",
        "$(location //examples/basic:README.md)",
    ],
    data = [
        "//examples/basic:BUILD.bazel",
        "//examples/basic:README.md",
    ],
)

sh_test(
    name = "examples_basic_run_e2e_test",
    srcs = ["examples_basic_run_e2e_test.sh"],
    args = ["$(location //examples/basic:web_dev)"],
    data = ["//examples/basic:web_dev"],
)

sh_test(
    name = "examples_workspace_bundle_e2e_test",
    srcs = ["examples_workspace_bundle_e2e_test.sh"],
    args = ["$(location //examples/workspace:pkg_b_bundle)"],
    data = ["//examples/workspace:pkg_b_bundle"],
)

sh_test(
    name = "examples_workspace_catalog_shape_test",
    srcs = ["examples_workspace_catalog_shape_test.sh"],
    args = [
        "$(location //examples/workspace:package.json)",
        "$(location //examples/workspace:packages/pkg-a/package.json)",
        "$(location //examples/workspace:packages/pkg-b/package.json)",
    ],
    data = [
        "//examples/workspace:package.json",
        "//examples/workspace:packages/pkg-a/package.json",
        "//examples/workspace:packages/pkg-b/package.json",
    ],
)

sh_test(
    name = "examples_vite_monorepo_catalog_shape_test",
    srcs = ["examples_vite_monorepo_catalog_shape_test.sh"],
    args = [
        "$(location //examples/vite_monorepo:package.json)",
        "$(location //examples/vite_monorepo:apps/app-a/package.json)",
        "$(location //examples/vite_monorepo:apps/app-b/package.json)",
    ],
    data = [
        "//examples/vite_monorepo:package.json",
        "//examples/vite_monorepo:apps/app-a/package.json",
        "//examples/vite_monorepo:apps/app-b/package.json",
    ],
)

sh_test(
    name = "examples_vite_monorepo_e2e_test",
    srcs = ["examples_vite_monorepo_e2e_test.sh"],
    args = [
        "$(location //examples/vite_monorepo:app_a_dev)",
        "$(location //examples/vite_monorepo:app_b_dev)",
    ],
    data = [
        "//examples/vite_monorepo:app_a_dev",
        "//examples/vite_monorepo:app_b_dev",
    ],
)

sh_test(
    name = "repo_all_targets_test",
    srcs = ["repo_all_targets_test.sh"],
    args = ["$(location //.github/workflows:ci.yml)"],
    data = ["//.github/workflows:ci.yml"],
)
