load("@rules_shell//shell:sh_test.bzl", "sh_test")

test_suite(
    name = "examples_test",
    tests = [
        ":examples_basic_hot_restart_shape_test",
        ":examples_basic_run_e2e_test",
        ":examples_bun_golang_monorepo_e2e_build_test",
        ":examples_vite_monorepo_catalog_shape_test",
        ":examples_vite_monorepo_e2e_test",
        ":examples_workspace_bundle_e2e_test",
        ":examples_workspace_catalog_shape_test",
    ],
)

sh_test(
    name = "examples_basic_e2e_build_test",
    size = "small",
    srcs = ["examples_basic_e2e_build_test.sh"],
    args = [
        "$(location //examples/basic:BUILD.bazel)",
        "$(location //examples/basic:README.md)",
    ],
    data = [
        "//examples/basic:BUILD.bazel",
        "//examples/basic:README.md",
    ],
)

sh_test(
    name = "examples_basic_run_e2e_test",
    size = "small",
    srcs = ["examples_basic_run_e2e_test.sh"],
    args = ["$(location //examples/basic:web_dev)"],
    data = ["//examples/basic:web_dev"],
)

sh_test(
    name = "examples_basic_hot_restart_shape_test",
    size = "small",
    srcs = ["examples_basic_hot_restart_shape_test.sh"],
    args = ["$(location //examples/basic:web_dev_hot_restart)"],
    data = ["//examples/basic:web_dev_hot_restart"],
)

sh_test(
    name = "examples_workspace_bundle_e2e_test",
    size = "small",
    srcs = ["examples_workspace_bundle_e2e_test.sh"],
    args = ["$(location //examples/workspace:pkg_b_bundle)"],
    data = ["//examples/workspace:pkg_b_bundle"],
)

sh_test(
    name = "examples_workspace_catalog_shape_test",
    size = "small",
    srcs = ["examples_workspace_catalog_shape_test.sh"],
    args = [
        "$(location //examples/workspace:package.json)",
        "$(location //examples/workspace:packages/pkg-a/package.json)",
        "$(location //examples/workspace:packages/pkg-b/package.json)",
    ],
    data = [
        "//examples/workspace:package.json",
        "//examples/workspace:packages/pkg-a/package.json",
        "//examples/workspace:packages/pkg-b/package.json",
    ],
)

sh_test(
    name = "examples_vite_monorepo_catalog_shape_test",
    size = "small",
    srcs = ["examples_vite_monorepo_catalog_shape_test.sh"],
    args = [
        "$(location //examples/vite_monorepo:package.json)",
        "$(location //examples/vite_monorepo:apps/app-a/package.json)",
        "$(location //examples/vite_monorepo:apps/app-b/package.json)",
    ],
    data = [
        "//examples/vite_monorepo:apps/app-a/package.json",
        "//examples/vite_monorepo:apps/app-b/package.json",
        "//examples/vite_monorepo:package.json",
    ],
)

sh_test(
    name = "examples_vite_monorepo_e2e_test",
    size = "small",
    srcs = ["examples_vite_monorepo_e2e_test.sh"],
    args = [
        "$(location //examples/vite_monorepo:app_a_dev)",
        "$(location //examples/vite_monorepo:app_b_dev)",
    ],
    data = [
        "//examples/vite_monorepo:app_a_dev",
        "//examples/vite_monorepo:app_b_dev",
    ],
)

sh_test(
    name = "examples_bun_golang_monorepo_e2e_build_test",
    size = "small",
    srcs = ["examples_bun_golang_monorepo_e2e_build_test.sh"],
    args = [
        "$(location //examples/bun_golang_monorepo:MODULE.bazel)",
        "$(location //examples/bun_golang_monorepo:MODULE.bazel.lock)",
        "$(location //examples/bun_golang_monorepo:go.work)",
        "$(location //examples/bun_golang_monorepo:README.md)",
    ],
    data = [
        "//examples/bun_golang_monorepo:MODULE.bazel",
        "//examples/bun_golang_monorepo:MODULE.bazel.lock",
        "//examples/bun_golang_monorepo:go.work",
        "//examples/bun_golang_monorepo:README.md",
    ],
)

sh_test(
    name = "repo_all_targets_test",
    size = "small",
    srcs = ["repo_all_targets_test.sh"],
    args = ["$(location //.github/workflows:ci.yml)"],
    data = ["//.github/workflows:ci.yml"],
)
