load("//js:defs.bzl", "js_binary", "js_run_devserver", "js_test", "ts_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

ts_library(
    name = "helper_lib",
    srcs = ["helper.ts"],
    data = ["payload.txt"],
)

js_binary(
    name = "compat_bin",
    entry_point = "main.ts",
    deps = [":helper_lib"],
    args = ["compat-mode"],
)

sh_test(
    name = "js_binary_compat_test",
    srcs = ["run_binary.sh"],
    args = ["$(location :compat_bin)"],
    data = [":compat_bin"],
)

js_test(
    name = "compat_suite",
    entry_point = "app.test.ts",
    deps = [":helper_lib"],
)

js_run_devserver(
    name = "compat_devserver",
    tool = ":compat_bin",
    args = ["devserver-mode"],
)

sh_test(
    name = "js_run_devserver_compat_test",
    srcs = ["run_devserver.sh"],
    args = ["$(location :compat_devserver)"],
    data = [":compat_devserver"],
)
