load("//bun:defs.bzl", "bun_bundle", "bun_test", "ts_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

ts_library(
    name = "helper_lib",
    srcs = ["helper.ts"],
)

bun_bundle(
    name = "bundle_with_deps",
    entry_points = ["app.ts"],
    deps = [":helper_lib"],
)

sh_test(
    name = "bundle_dep_propagation_test",
    srcs = ["verify_bundle.sh"],
    args = ["$(location :bundle_with_deps)"],
    data = [":bundle_with_deps"],
)

bun_test(
    name = "test_with_deps",
    srcs = ["app.test.ts"],
    deps = [":helper_lib"],
)
